--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "sonner": "^1.5.0",
+    "stripe": "^17.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.1.0",
