--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
@@ -44,6 +44,7 @@
     "query-string": "^9.1.1",
     "react": "^18",
     "react-confetti": "^6.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
