--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
+    "recharts": "^2.13.3",
     "sonner": "^1.5.0",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.4",
